--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -14,10 +14,7 @@
       = f.label :channel_id
       = f.error_message_on :channel_id
     %dd= f.collection_select :channel_id, sorted_channels, :id, :name, include_blank: ""
-    - if @post.publishable?
-      %label.checkbox
-        = check_box_tag :published, "true", false
-        = label_tag :published, 'Publish this post'
   %fieldset.actions
-    = f.submit 'Submit'
+    = f.submit 'Publish'
+    = f.submit 'Save as draft'
     = link_to 'cancel', root_path
